test/conformance/chainsaw/validate/clusterpolicy/standard/cel(deprecated)/check-statefulset-namespace/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-statefulset-namespace
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-03
    try:
    - apply:
        file: statefulset-pass.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: statefulset-fail.yaml
